--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,13 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
+        <p>Other places you can find me:</p>
+        <ul>
+          <li><a href="https://twitter.com/wxs">Twitter</a></li>
+          <li><a href="https://github.com/wxsBSD">Github</a></li>
+          <li><a href="https://people.freebsd.org/~wxs">FreeBSD</a></li>
+        </ul>
+
       </header>
       <section>
 
