Update description, again.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,14 @@
           <img src="{{site.logo | relative_url}}" alt="Logo" />
         {% endif %}
 
+        <p></p>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <p>Other places you can find me:</p>
         <ul>
-          <li><a href="https://twitter.com/wxs">Twitter</a></li>
-          <li><a href="https://github.com/wxsBSD">Github</a></li>
-          <li><a href="https://people.freebsd.org/~wxs">FreeBSD</a></li>
+          <ul><a href="https://twitter.com/wxs">Twitter</a></ul>
+          <ul><a href="https://github.com/wxsBSD">Github</a></ul>
+          <ul><a href="https://people.freebsd.org/~wxs">FreeBSD</a></ul>
         </ul>
 
       </header>
