--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,6 +27,7 @@
         <ul>
           <ul><a href="https://twitter.com/wxs">Twitter</a></ul>
           <ul><a href="https://github.com/wxsBSD">Github</a></ul>
+          <ul><a href="https://gist.github.com/wxsBSD/">Gists</a></ul>
           <ul><a href="https://people.freebsd.org/~wxs">FreeBSD</a></ul>
         </ul>
 
