--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,12 +24,10 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <p>Other places you can find me:</p>
-        <ul>
-          <ul><a href="https://twitter.com/wxs">Twitter</a></ul>
-          <ul><a href="https://github.com/wxsBSD">Github</a></ul>
-          <ul><a href="https://gist.github.com/wxsBSD/">Gists</a></ul>
-          <ul><a href="https://people.freebsd.org/~wxs">FreeBSD</a></ul>
-        </ul>
+        <a href="https://twitter.com/wxs">Twitter</a></br>
+        <a href="https://github.com/wxsBSD">Github</a></br>
+        <a href="https://gist.github.com/wxsBSD/">Gists</a></br>
+        <a href="https://people.freebsd.org/~wxs">FreeBSD</a></br>
 
       </header>
       <section>
