No longer using twitter or rock climbing.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
         <p>Other places you can find me:</p>
-        <a href="https://twitter.com/wxs">Twitter</a></br>
+        <a href="https://bsky.app/profile/wxs.bsky.social">Bluesky</a></br>
         <a href="https://github.com/wxsBSD">Github</a></br>
         <a href="https://gist.github.com/wxsBSD/">Gists</a></br>
         <a href="https://people.freebsd.org/~wxs">FreeBSD</a></br>
